--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-/target
 /.idea
-/instance-src
+/.settings
 /.buildpath
 /.project
-/.settings
+/.DS_Store
+/target
+/instance-src
+/vendor
 /build.properties
-/doc/build
-# the apple directory description
-.DS_Store
+/composer.lock
+/composer.phar
+/*.iml
