--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,60 @@
 {
-    "name": "techdivision/appserver",
-    "description": "Thread based PHP daemon to implement stuff like message queues.",
-    "homepage": "https://github.com/techdivision/TechDivision_ApplicationServer",
-    "license": [ "OSL-3.0" ],
-    "require": {
-        "php" : ">=5.4.0",
-        "psr/log": "*",
-        "rhumsaa/uuid": "~2.4",
-        "monolog/monolog": "1.10.*",
-        "herrera-io/annotations": "1.0.*",
-        "techdivision/context": "0.5.*",
-        "techdivision/storage": "0.5.*",
-        "techdivision/configuration": "0.1.*",
-        "techdivision/application": "0.2.*",
-        "techdivision/php-by-contract": "0.3.*"
-    },
-    "autoload": {
-        "psr-0": {
-            "TechDivision\\ApplicationServer": [ "src/", "tests/" ]      
-        }
-    },
-    "config":{
-        "github-oauth":{
-            "github.com":"604a3b5943228e434a5b52c2ba3cf72286d30db9"
-        }
-    }
+	"name" : "techdivision/appserver",
+	"description" : "Thread based PHP daemon to implement stuff like message queues.",
+	"homepage" : "https://github.com/techdivision/TechDivision_ApplicationServer",
+	"license" : "OSL-3.0",
+	"require" : {
+		"php" : ">=5.4.0",
+		"psr/log" : "*",
+		"rhumsaa/uuid" : "~2.4",
+		"monolog/monolog" : "1.10.*",
+		"herrera-io/annotations" : "1.0.*",
+		"techdivision/context" : "0.5.*",
+		"techdivision/storage" : "0.5.*",
+		"techdivision/configuration" : "0.1.*",
+		"techdivision/application" : "0.2.*",
+		"techdivision/php-by-contract" : "0.3.*"
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : "3.7.*",
+		"appserver-io/build" : "0.1.*"
+	},
+	"autoload" : {
+		"psr-0" : {
+			"TechDivision\\ApplicationServer" : [
+				"src/",
+				"tests/"
+			]
+		}
+	},
+	"config" : {
+		"github-oauth" : {
+			"github.com" : "604a3b5943228e434a5b52c2ba3cf72286d30db9"
+		}
+	},
+	"authors" : [{
+			"name" : "Tim Wagner",
+			"email" : "t.wagner@techdivision.com",
+			"homepage" : "https://github.com/wagnert",
+			"role" : "Developer"
+		}, {
+			"name" : "Johann Zelger",
+			"email" : "j.zelger@techdivision.com",
+			"homepage" : "https://github.com/zelgerj",
+			"role" : "Developer"
+		}, {
+			"name" : "Bernhard Wick",
+			"email" : "b.wick@techdivision.com",
+			"homepage" : "https://github.com/wick-ed",
+			"role" : "Developer"
+		}
+	],
+	"support" : {
+		"email" : "t.wagner@techdivision.com",
+		"issues" : "https://github.com/techdivision/TechDivision_ApplicationServer/issues",
+		"source" : "https://github.com/techdivision/TechDivision_ApplicationServer"
+	},
+	"keywords" : [
+		"php application server"
+	]
 }
