--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 5.4
 
 before_install:
-  - pecl install pthreads-beta
+  - pecl install pthreads-1.0.1
   - pecl install xdebug
   - pyrus install pear/PHP_CodeSniffer
   - phpenv rehash
