--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,20 @@
 		"rhumsaa/uuid" : "~2.4",
 		"appserver-io/logger" : "0.1.*",
 		"herrera-io/annotations" : "1.0.*",
-        "techdivision/lang" : "0.1.*",
+		"techdivision/lang" : "0.1.*",
 		"techdivision/context" : "0.5.*",
 		"techdivision/storage" : "0.5.*",
 		"techdivision/configuration" : "0.1.*",
 		"techdivision/application" : "0.3.*",
 		"techdivision/php-by-contract" : "0.3.*",
-        "techdivision/server" : "0.1.*",
-        "techdivision/connection" : "0.1.*"
+		"techdivision/server" : "0.1.*",
+		"techdivision/connection" : "0.1.*",
+		"techdivision/naming" : "0.1.*",
+		"techdivision/enterprisebeans" : "0.1.*"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "3.7.*",
+        "nikic/phlexy" : "dev-master",
 		"appserver-io/build" : "0.1.*"
 	},
 	"autoload" : {
