--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
 		"mtdowling/cron-expression" : "1.0.*",
 		"appserver-io-psr/epb" : "0.1.*",
 		"appserver-io-psr/servlet" : "0.6.*",
-		"appserver-io/http" : "0.1.*",
+        "appserver-io-psr/http-message" : "0.1.*",
+		"appserver-io/http" : "0.2.*",
 		"appserver-io/persistencecontainerclient" : "0.7.*",
-		"techdivision/server" : "0.1.*",
+		"appserver-io/server" : "0.2.*",
+        "appserver-io/webserver": "0.3.*",
 		"techdivision/context" : "0.5.*",
 		"techdivision/storage" : "0.5.*",
 		"techdivision/connection" : "0.1.*",
