--- a/build.xml
+++ b/build.xml
@@ -76,5 +76,44 @@
                        byline="true"
         />
     </target>
+    
+    <!-- ==================================================================== -->
+    <!-- Copies the sources to the temporary directory                        -->
+    <!-- ==================================================================== -->
+    <target name="copy" description="Copies the sources to the temporary directory.">
+    	
+    	<antcall target="prepare" />
+    	
+        <copy todir="${php-target.dir}${deploy.dir}" preservelastmodified="true" overwrite="true">
+            <fileset dir="${basedir}">
+                <include name="src/**/*" />
+                <include name="var/**/*" />
+                <include name="tests/**/*" />
+                <include name="resources/**/*" />
+                <include name="server.php" />
+                <include name="composer.json" />
+                <include name="etc/appserver/conf.d/context.xml" />
+            </fileset>
+        </copy>
+    	
+    </target>
+    
+    <!-- ==================================================================== -->
+    <!-- Copies the sources to the deploy directory                           -->
+    <!-- ==================================================================== -->
+    <target name="deploy" depends="copy" description="Copies the sources to the deploy directory.">
+        
+    	<copy todir="${deploy.dir}" preservelastmodified="true" overwrite="true">
+            <fileset dir="${php-target.dir}${deploy.dir}">
+                <include name="**/*"/>
+            </fileset>
+        </copy>
+    	
+    	<!--
+    	<exec dir="${deploy.dir}" executable="${deploy.dir}/bin/php">
+    	    <arg line="${deploy.dir}/bin/composer run-script post-install-cmd"/>
+    	</exec>
+    	-->
+    </target>
 
 </project>
