--- a/build.default.properties
+++ b/build.default.properties
@@ -8,7 +8,7 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 0.11.1
+release.version = 1.0.0-beta
 
 # ---- Documentation Settings ---------------------------------------------------
 # Directories
