--- a/build.xml
+++ b/build.xml
@@ -81,9 +81,9 @@
     <!-- Copies the sources to the temporary directory                        -->
     <!-- ==================================================================== -->
     <target name="copy" description="Copies the sources to the temporary directory.">
-    	
-    	<antcall target="prepare" />
-    	
+        <!-- prepare the build environment -->
+        <antcall target="prepare" />
+        <!-- copy all files to the target directory -->
         <copy todir="${php-target.dir}${deploy.dir}" preservelastmodified="true" overwrite="true">
             <fileset dir="${basedir}">
                 <include name="src/**/*" />
@@ -95,25 +95,22 @@
                 <include name="etc/appserver/conf.d/context.xml" />
             </fileset>
         </copy>
-    	
     </target>
     
     <!-- ==================================================================== -->
     <!-- Copies the sources to the deploy directory                           -->
     <!-- ==================================================================== -->
     <target name="deploy" depends="copy" description="Copies the sources to the deploy directory.">
-        
-    	<copy todir="${deploy.dir}" preservelastmodified="true" overwrite="true">
+        <!-- copy all files to the deploy.directory -->
+        <copy todir="${deploy.dir}" preservelastmodified="true" overwrite="true">
             <fileset dir="${php-target.dir}${deploy.dir}">
                 <include name="**/*"/>
             </fileset>
         </copy>
-    	
-    	<!--
-    	<exec dir="${deploy.dir}" executable="${deploy.dir}/bin/php">
-    	    <arg line="${deploy.dir}/bin/composer run-script post-install-cmd"/>
-    	</exec>
-    	-->
+        <!-- execute the composer post install script -->
+        <exec dir="${deploy.dir}" executable="${deploy.dir}/bin/php">
+            <arg line="${deploy.dir}/bin/composer run-script post-install-cmd"/>
+        </exec>
     </target>
 
 </project>
