Bugfixing deploy target to work on Windows also

--- a/build.xml
+++ b/build.xml
@@ -109,7 +109,9 @@
         </copy>
         <!-- execute the composer post install script -->
         <exec dir="${deploy.dir}" executable="${appserver.bin.dir}/php">
-            <arg line="${appserver.bin.dir}/composer run-script post-install-cmd"/>
+            <arg value="${appserver.bin.dir}/composer.phar" />
+            <arg value="run-script" />
+            <arg value="post-install-cmd" />
         </exec>
     </target>
 
