Remove unnecessary handler manager because WebSocketServer is not activated by default any longer

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@
 /etc/appserver/appserver.xml
 /var/tmp/opcache-blacklist.txt
 .README.md.html
-.ROADMAP.md.html 
+.ROADMAP.md.html
+.CHANGELOG.md.html
