Add bootstrap.php + server.php to be ignored by phpcs

--- a/build.default.properties
+++ b/build.default.properties
@@ -20,3 +20,7 @@ doc.image.target.dir = ${basedir}/../TechDivision_ApplicationServerWebsite/src/s
 # ---- PHPCPD Settings ----------------------------------------------------------
 # Directories
 phpcpd-exclude.dir = --exclude AppserverIo/Appserver/PersistentServletEngine
+
+# ---- PHPCS Settings -----------------------------------------------------------
+# can be overwritten locally
+phpcs-additional.args = --ignore=server.php,bootstrap.php
