--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 		"appserver-io/webserver" : "0.3.*",
 		"appserver-io/properties" : "0.1.*",
 		"appserver-io/configuration" : "0.1.*",
-		"appserver-io/persistencecontainerclient" : "0.7.*"
+		"appserver-io/messagequeueclient" : "0.6.*",
+        "appserver-io/persistencecontainerclient" : "0.7.*"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "3.7.*",
