Make PSR-2 compatible

--- a/build.default.properties
+++ b/build.default.properties
@@ -23,4 +23,4 @@ phpcpd-exclude.dir = --exclude AppserverIo/Appserver/PersistentServletEngine
 
 # ---- PHPCS Settings -----------------------------------------------------------
 # can be overwritten locally
-phpcs-additional.args = --ignore=server.php,bootstrap.php
+phpcs-additional.args = --ignore=server.php,bootstrap.php,var/scripts/bootstrap.php,var/scripts/core_functions.php
