--- a/build.default.properties
+++ b/build.default.properties
@@ -9,6 +9,7 @@
 
 # ---- Module Release Settings --------------------------------------------------
 release.version = 1.0.0-beta2
+release.name = Iron Horse
 
 # ---- Documentation Settings ---------------------------------------------------
 # Directories
