--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@ host: 0.0.0.0
 baseurl: "/appserver"
 url: "http://appserver.io"
 
+collections:
+  docs:
+    output: true
+
 twitter_username: php_appserver
 
 github_username:  appserver-io
