--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,7 @@ twitter_username: php_appserver
 github_username:  appserver-io
 github_repository: https://github.com/appserver.io/appserver
 
-google_analytics_id: UA-xxxxxxxx-x
-google_analytics_site: appserver.io
+google_analytics_id: UA-42386171-1
 
 markdown: redcarpet
 redcarpet:
