extended unit testing for services + cleanup

--- a/build.default.properties
+++ b/build.default.properties
@@ -8,7 +8,7 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.0.0-beta4
+release.version = 1.0.0-RC1
 release.name = Iron Horse
 
 # ---- Documentation Settings ---------------------------------------------------
