--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /sbin
 /etc/appserver/appserver.xml
 /var/tmp/opcache-blacklist.txt
+/webapps/index.html
 *.log
 .README.md.html
 .ROADMAP.md.html
