fixed icon integrations

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -9,3 +9,7 @@
 - slug: servlet-engine
   name: Servlet-Engine
   title: Servlet-Engine News
+
+- slug: webserver
+  name: WebServer
+  title: WebServer News
