--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -10,6 +10,10 @@
   name: Servlet-Engine
   title: Servlet-Engine News
 
+- slug: persistence-container
+  name: Persistence-Container
+  title: Persistence-Container News
+
 - slug: webserver
   name: WebServer
   title: WebServer News
