--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -14,6 +14,14 @@
   name: Persistence-Container
   title: Persistence-Container News
 
+- slug: naming-directory
+  name: Naming-Directory
+  title: Naming-Directory News
+
+- slug: dependency-injection
+  name: Dependency-Injection
+  title: Dependency-Injection News
+
 - slug: webserver
   name: WebServer
   title: WebServer News
