fixes #463 Add github repo link to main navi

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ github_issue: https://github.com/appserver-io/appserver/issues/
 
 google_analytics_id: UA-42386171-1
 
+appserver_version: 1.0.0rc1
+
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
