--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ collections:
 twitter_username: php_appserver
 
 github_username:  appserver-io
-github_repository: https://github.com/appserver.io/appserver
+github_repository: https://github.com/appserver-io/appserver
 github_issue: https://github.com/appserver-io/appserver/issues/
 
 google_analytics_id: UA-42386171-1
