--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 		"appserver-io-psr/servlet" : "0.8.*",
         "appserver-io-psr/deployment" : "0.1.*",
 		"appserver-io-psr/application" : "0.5.*",
+        "appserver-io-psr/mop" : "0.1.*",
 		"appserver-io/rmi" : "0.7.*",
 		"appserver-io/http" : "0.2.*",
 		"appserver-io/lang" : "0.1.*",
