updated to stable 1.0.0 dependencies

--- a/composer.json
+++ b/composer.json
@@ -7,28 +7,28 @@
 		"php" : ">=5.4.0",
 		"rhumsaa/uuid" : "~2.4",
 		"doctrine/orm" : "2.4.*",
-		"appserver-io-psr/epb" : "0.4.*",
-		"appserver-io-psr/pms" : "0.2.*",
-        "appserver-io-psr/mop" : "0.1.*",
-        "appserver-io-psr/naming" : "0.2.*",
-		"appserver-io-psr/servlet" : "0.8.*",
-        "appserver-io-psr/deployment" : "0.1.*",
-		"appserver-io-psr/application" : "0.6.*",
-		"appserver-io/rmi" : "0.7.*",
-		"appserver-io/http" : "0.2.*",
-		"appserver-io/lang" : "0.1.*",
-		"appserver-io/server" : "0.2.*",
-		"appserver-io/logger" : "0.1.*",
-		"appserver-io/storage" : "0.5.*",
-		"appserver-io/messaging" : "0.4.*",
-		"appserver-io/microcron" : "0.1.*",
-		"appserver-io/webserver" : "0.4.*",
-		"appserver-io/properties" : "0.2.*",
-		"appserver-io/configuration" : "0.1.*",
-		"appserver-io/doppelgaenger" : "0.6.*"
+		"appserver-io-psr/epb" : "~1.0",
+		"appserver-io-psr/pms" : "~1.0",
+        "appserver-io-psr/mop" : "~1.0",
+        "appserver-io-psr/naming" : "~1.0",
+		"appserver-io-psr/servlet" : "~1.0",
+        "appserver-io-psr/deployment" : "~1.0",
+		"appserver-io-psr/application" : "~1.0",
+		"appserver-io/rmi" : "~1.0",
+		"appserver-io/http" : "~1.0",
+		"appserver-io/lang" : "~1.0",
+		"appserver-io/server" : "~1.0",
+		"appserver-io/logger" : "~1.0",
+		"appserver-io/storage" : "~1.0",
+		"appserver-io/messaging" : "~1.0",
+		"appserver-io/microcron" : "~1.0",
+		"appserver-io/webserver" : "~1.0",
+		"appserver-io/properties" : "~1.0",
+		"appserver-io/configuration" : "~1.0",
+		"appserver-io/doppelgaenger" : "~1.0"
 	},
 	"require-dev" : {
-		"appserver-io/build" : "0.2.*",
+		"appserver-io/build" : "~1.0",
 		"squizlabs/php_codesniffer" : "dev-master as 2.1.0",
 		"mikey179/vfsStream" : "1.*"
 	},
