--- a/_data/downloads.yml
+++ b/_data/downloads.yml
@@ -1,30 +1,35 @@
 - os: Mac OS X
   id: osx
   icon: fa-apple
-  dist-suffix: .mac.x86_64.pkg
+  dist-suffix: -44_x86_64.pkg
+  separator: "_"
   
 - os: Windows
   id: win
   icon: fa-windows   
-  dist-suffix: .win.x86.jar
+  dist-suffix: -57_x86.jar
+  separator: "_"
 
 - os: Debian
   id: debian
   icon: fa-linux
-  dist-suffix: .linux.debian.x86_64.deb
-  runtime-suffix: .linux.debian.x86_64.deb
+  dist-suffix: -45_amd64.deb
+  runtime-suffix: -24_amd64.deb
+  separator: "_"
 
 - os: Fedora
   id: fedora
   icon: fa-linux
-  dist-suffix: .linux.fedora.x86_64.rpm
-  runtime-suffix: .linux.fedora.x86_64.rpm
+  dist-suffix: -62.fc20.x86_64.rpm
+  runtime-suffix: -34.fc20.x86_64.rpm
+  separator: "-"
 
 - os: Cent OS
   id: centos
   icon: fa-linux
-  dist-suffix: .linux.centos.x86_64.rpm
-  runtime-suffix: .linux.centos.x86_64.rpm
+  dist-suffix: -49.el6.x86_64.rpm
+  runtime-suffix: -40.el6.x86_64.rpm
+  separator: "-"
 
 - os: Raspbian
   id: raspbian
