--- a/_data/downloads.yml
+++ b/_data/downloads.yml
@@ -1,32 +1,32 @@
 - os: Mac OS X
   id: osx
   icon: fa-apple
-  dist-suffix: -52_x86_64.pkg
+  dist-suffix: -56_x86_64.pkg
   separator: "_"
   
 - os: Windows
   id: win
   icon: fa-windows   
-  dist-suffix: -66_x86.jar
+  dist-suffix: -73_x86.exe
   separator: "_"
 
 - os: Debian
   id: debian
   icon: fa-linux
-  dist-suffix: -52_amd64.deb
-  runtime-suffix: -35_amd64.deb
+  dist-suffix: -57_amd64.deb
+  runtime-suffix: -37_amd64.deb
   separator: "_"
 
 - os: Fedora
   id: fedora
   icon: fa-linux
-  dist-suffix: -70.fc20.x86_64.rpm
-  runtime-suffix: -42.fc20.x86_64.rpm
+  dist-suffix: -74.fc20.x86_64.rpm
+  runtime-suffix: -44.fc20.x86_64.rpm
   separator: "-"
 
 - os: Cent OS
   id: centos
   icon: fa-linux
-  dist-suffix: -57.el6.x86_64.rpm
-  runtime-suffix: -48.el6.x86_64.rpm
+  dist-suffix: -61.el6.x86_64.rpm
+  runtime-suffix: -50.el6.x86_64.rpm
   separator: "-"
