--- a/build.default.properties
+++ b/build.default.properties
@@ -8,7 +8,7 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.1.0
+release.version = 1.1.0-alpha3
 release.name = Iron Horse
 
 # ---- PHPCPD Settings ----------------------------------------------------------
