--- a/build.default.properties
+++ b/build.default.properties
@@ -8,8 +8,8 @@
 #--------------------------------------------------------------------------------
 
 # ---- Module Release Settings --------------------------------------------------
-release.version = 1.1.0-alpha3
-release.name = Iron Horse
+release.version = 1.1.0-beta1
+release.name = Iron Knight
 
 # ---- PHPCPD Settings ----------------------------------------------------------
 # Directories
