--- a/composer.json
+++ b/composer.json
@@ -66,9 +66,11 @@
 	"keywords" : [
 		"php application server"
 	],
-	"scripts" : {
-		"post-install-cmd" : [
-			"AppserverIo\\Appserver\\Meta\\Composer\\Script\\Setup::postInstall"
-		]
-	}
+	"repositories": [
+    {
+         "type": "composer",
+         "url": "http://packagist.org"
+    },
+    { "packagist": false }
+]
 }
