--- a/build.default.properties
+++ b/build.default.properties
@@ -14,7 +14,9 @@ release.name = Iron Knight
 # ---- PHPCPD Settings ----------------------------------------------------------
 # Directories
 phpcpd-exclude.dir = --exclude AppserverIo/Appserver/PersistentServletEngine
+phpcpd-exclude.names = --names-exclude=NamingDirectoryImpl.php
+phpcpd-additional.args = ${phpcpd-exclude.dir} ${phpcpd-exclude.names}
 
 # ---- PHPCS Settings -----------------------------------------------------------
 # can be overwritten locally
-phpcs-additional.args = --ignore=server.php,bootstrap.php,webapps,var/scripts/bootstrap.php,var/scripts/core_functions.php
+phpcs-additional.args = --ignore=server.php,bootstrap.php,webapps,var/scripts/bootstrap.php
